--- a/PredefinedParams.ipynb
+++ b/PredefinedParams.ipynb
@@ -145,10 +145,10 @@
       "Will train until valid-auc hasn't improved in 50 rounds.\n",
       "[10]\ttrain-auc:0.945303\tvalid-auc:0.942712\n",
       "[20]\ttrain-auc:0.95201\tvalid-auc:0.948047\n",
-      "[30]\ttrain-auc:0.956964\tvalid-auc:0.952498\n",
+      "[30]\ttrain-auc:0.956964\tvalid-auc:0.952497\n",
       "[40]\ttrain-auc:0.960162\tvalid-auc:0.955552\n",
       "[50]\ttrain-auc:0.961934\tvalid-auc:0.957075\n",
-      "[60]\ttrain-auc:0.962866\tvalid-auc:0.957468\n",
+      "[60]\ttrain-auc:0.962866\tvalid-auc:0.957469\n",
       "[70]\ttrain-auc:0.964122\tvalid-auc:0.958385\n",
       "[80]\ttrain-auc:0.964983\tvalid-auc:0.959032\n",
       "[90]\ttrain-auc:0.965416\tvalid-auc:0.959208\n",
@@ -208,17 +208,17 @@
     {
      "data": {
       "text/plain": [
-       "{'app': 532,\n",
+       "{'app': 534,\n",
        " 'clicks_by_ip': 484,\n",
-       " 'device': 191,\n",
-       " 'channel': 532,\n",
+       " 'device': 189,\n",
+       " 'channel': 529,\n",
        " 'os': 365,\n",
-       " 'second': 162,\n",
-       " 'hour': 97,\n",
+       " 'second': 161,\n",
+       " 'hour': 99,\n",
        " 'minute': 215,\n",
-       " 'woy': 2,\n",
-       " 'dow': 2,\n",
-       " 'day': 1}"
+       " 'day': 1,\n",
+       " 'woy': 1,\n",
+       " 'dow': 1}"
       ]
      },
      "execution_count": 10,
@@ -267,27 +267,6 @@
    "source": [
     "model = xgb.Booster({'nthread': 4})  # init model\n",
     "model.load_model('0002.model')  # load data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Booster' object has no attribute 'best_score'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-8b1b925663c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbest_score\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Booster' object has no attribute 'best_score'"
-     ]
-    }
-   ],
-   "source": [
-    "model."
    ]
   },
   {
