Implement download data with Kaggle API

--- a/Fraud Detection.ipynb
+++ b/Fraud Detection.ipynb
@@ -175,12 +175,12 @@
     "## Tip 7 - Using Dask or Pandas on Ray\n",
     "With Dask you will need to change the code. But with Ray you can use it as normal Pandas.\n",
     "- [Dask - Dataframe](http://docs.dask.org/en/latest/dataframe.html)\n",
-    "- [Padas on ray](https://ray.readthedocs.io/en/latest/installation.html)\n",
+    "- [Modin - Dataframe](https://github.com/modin-project/modin)\n",
     "\n",
     "Example with Padas on Ray:\n",
     "```python\n",
     "#import pandas as pd\n",
-    "import ray.dataframe as pd\n",
+    "import modin.pandas as pd\n",
     "train = pd.read_csv(train.csv)\n",
     "```"
    ]
@@ -227,9 +227,14 @@
     "import gc\n",
     "import subprocess\n",
     "import os.path\n",
+    "import shutil\n",
+    "import zipfile\n",
+    "\n",
+    "import matplotlib\n",
+    "import sklearn\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_auc_score\n",
@@ -242,8 +247,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "import sklearn"
+    "import pandas as pd\n",
+    "\n",
+    "# Using modin for parallell pandas\n",
+    "# import modin.pandas as pd"
    ]
   },
   {
@@ -261,12 +268,98 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Get the data"
+    "# Get the data\n",
+    "\n",
+    "To get the data we can use several methods. I'm going to use the Kaggle API to download the datasets from the competition.\n",
+    "After I have downloaded the datasets, they are in zip archives, so I need to extract the files using the ZipFile library.\n",
+    "The kaggle API is checking it the files is already dowloaded and will only re-download the files if they are outdated.\n",
+    "Then I made a simple function to check if the train.csv is already present, if not then I need to extract it from the archive."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.0 / client 1.4.7.1)\n",
+      "train.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "train_sample.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "test.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "sample_submission.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "test_supplement.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import kaggle\n",
+    "\n",
+    "!kaggle competitions download -c talkingdata-adtracking-fraud-detection -p datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train.csv allready exists skipping..\n",
+      "Extracting test.csv.zip...\n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_train_csv():\n",
+    "    # Check if train.csv allready exists\n",
+    "    if os.path.isfile(\"datasets/train.csv\"):\n",
+    "        print(\"Train.csv allready exists skipping..\")\n",
+    "    else:\n",
+    "        # Check if train.csv.zip exists, then unzip and move the content to datasets folder\n",
+    "        print(\"Train.csv does not exists in datasets\")\n",
+    "        if os.path.isfile(\"datasets/train.csv.zip\"):\n",
+    "            print(\"Extracting train.csv.zip...\")\n",
+    "            with zipfile.ZipFile(\"datasets/train.csv.zip\",\"r\") as zip_ref:\n",
+    "                zip_ref.extractall(\"datasets\")\n",
+    "\n",
+    "            print(\"Moving train.csv to datasets/train.csv\")\n",
+    "            os.rename(\"datasets/mnt/ssd/kaggle-talkingdata2/competition_files/train.csv\", \"datasets/train.csv\")\n",
+    "            shutil.rmtree('datasets/mnt', ignore_errors=True)\n",
+    "            print(\"Done\")\n",
+    "\n",
+    "def get_test_csv():\n",
+    "    if os.path.isfile(\"datasets/test.csv\"):\n",
+    "        print(\"Test.csv allready exists skipping...\")\n",
+    "    else:\n",
+    "        if os.path.isfile(\"datasets/test.csv.zip\"):\n",
+    "            print(\"Extracting test.csv.zip...\")\n",
+    "            with zipfile.ZipFile(\"datasets/train.csv.zip\", \"r\") as zip_ref:\n",
+    "                zip_ref.extractall(\"datasets\")\n",
+    "            print(\"Done\")\n",
+    "            \n",
+    "get_train_csv()\n",
+    "get_test_csv()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we import the data we need to define the labels of the train data and the test data.\n",
+    "The test data is missing one column, the `is_attributed`.\n",
+    "\n",
+    "We also need to define the datatypes of each attribute to optimize the memory usage, as previously mentioned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +446,7 @@
        "(1000000, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -401,56 +494,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>191759</td>\n",
+       "      <td>84774</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>13</td>\n",
+       "      <td>19</td>\n",
        "      <td>379</td>\n",
-       "      <td>2017-11-06 14:44:51</td>\n",
+       "      <td>2017-11-06 15:47:52</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>139355</td>\n",
-       "      <td>3</td>\n",
+       "      <td>109938</td>\n",
+       "      <td>9</td>\n",
        "      <td>1</td>\n",
        "      <td>13</td>\n",
-       "      <td>379</td>\n",
-       "      <td>2017-11-06 15:43:51</td>\n",
+       "      <td>442</td>\n",
+       "      <td>2017-11-06 16:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2564</td>\n",
-       "      <td>3</td>\n",
+       "      <td>44663</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>8</td>\n",
-       "      <td>379</td>\n",
-       "      <td>2017-11-06 15:48:21</td>\n",
+       "      <td>22</td>\n",
+       "      <td>477</td>\n",
+       "      <td>2017-11-06 16:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>127375</td>\n",
+       "      <td>182113</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>122</td>\n",
+       "      <td>19</td>\n",
+       "      <td>319</td>\n",
        "      <td>2017-11-06 16:00:00</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>90758</td>\n",
-       "      <td>2</td>\n",
+       "      <td>109393</td>\n",
+       "      <td>20</td>\n",
        "      <td>1</td>\n",
-       "      <td>10</td>\n",
-       "      <td>469</td>\n",
-       "      <td>2017-11-06 16:00:00</td>\n",
+       "      <td>32</td>\n",
+       "      <td>259</td>\n",
+       "      <td>2017-11-06 16:00:01</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -460,11 +553,11 @@
       ],
       "text/plain": [
        "       ip  app  device  os  channel           click_time attributed_time  \\\n",
-       "0  191759    3       1  13      379  2017-11-06 14:44:51             NaN   \n",
-       "1  139355    3       1  13      379  2017-11-06 15:43:51             NaN   \n",
-       "2    2564    3       1   8      379  2017-11-06 15:48:21             NaN   \n",
-       "3  127375   11       1  22      122  2017-11-06 16:00:00             NaN   \n",
-       "4   90758    2       1  10      469  2017-11-06 16:00:00             NaN   \n",
+       "0   84774    3       1  19      379  2017-11-06 15:47:52             NaN   \n",
+       "1  109938    9       1  13      442  2017-11-06 16:00:00             NaN   \n",
+       "2   44663    2       1  22      477  2017-11-06 16:00:00             NaN   \n",
+       "3  182113   11       1  19      319  2017-11-06 16:00:00             NaN   \n",
+       "4  109393   20       1  32      259  2017-11-06 16:00:01             NaN   \n",
        "\n",
        "   is_attributed  \n",
        "0              0  \n",
@@ -474,7 +567,7 @@
        "4              0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
