Add description of feature importance

--- a/Fraud Detection.ipynb
+++ b/Fraud Detection.ipynb
@@ -2441,6 +2441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we look at the feature importance of the `XGBRegressor` the IP address is marked as a very strong feature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -2644,6 +2651,13 @@
    "metadata": {},
    "source": [
     "### Plotting the feature importance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we now look at the feature importance of the Classifier vs the Regressor in the previous step, the `app`, `channel` and `ip`is now very strong features."
    ]
   },
   {
@@ -2867,6 +2881,13 @@
    "metadata": {},
    "source": [
     "### Plotting the feature importance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we now compare the results with the other two models, the feature importance of the third model is very strong for the `channel` and the `app`. It's very difficult to come up with a conclution to what bots are targeting, but clearly there is a good combination of the application and the channel."
    ]
   },
   {
